K8s/test/justine-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2025-05-03T19:01:34Z"
  labels:
    first-app: nginx
  name: justine-nginx
  namespace: default
  resourceVersion: "6258"
  uid: a47360e4-00d2-4c59-bcc9-8cd15dc7ea90
spec:
  containers:
  - image: nginx:alpine
    imagePullPolicy: IfNotPresent
    name: justine-nginx
    ports:
    - containerPort: 80
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-s6sj8
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: node02
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-s6sj8
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2025-05-03T19:01:38Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2025-05-03T19:01:34Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2025-05-03T19:01:38Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2025-05-03T19:01:38Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2025-05-03T19:01:34Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://c8bc9b02eac41ed0e2d0d2e07311a0dbfccf54f3f051b5b195c4939651de6706
    image: docker.io/library/nginx:alpine
    imageID: docker.io/library/nginx@sha256:65645c7bb6a0661892a8b03b89d0743208a18dd2f3f17a54ef4b76fb8e2f2a10
    lastState: {}
    name: justine-nginx
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2025-05-03T19:01:38Z"
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-s6sj8
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 10.0.0.4
  hostIPs:
  - ip: 10.0.0.4
  phase: Running
  podIP: 10.244.2.3
  podIPs:
  - ip: 10.244.2.3
  qosClass: BestEffort
  startTime: "2025-05-03T19:01:34Z"
