K8s/test/nginx-config-ingress-controller.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
data:
  # General NGINX settings
  use-proxy-protocol: "false"
  enable-vts-status: "false"

  # Client request settings
  proxy-body-size: "64m"
  proxy-read-timeout: "60"
  proxy-send-timeout: "60"

  # Load balancing settings
  load-balance: "round_robin"

  # SSL settings
  ssl-protocols: "TLSv1.2 TLSv1.3"
  ssl-prefer-server-ciphers: "true"

  # Logging settings
  log-format-upstream: >-
    $remote_addr - [$proxy_add_x_forwarded_for] - $remote_user [$time_local]
    "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"
    "$request_length" "$request_time" "$upstream_response_time" "$upstream_status"

  # Custom error pages
  custom-http-errors: "404,403"

  # Enable gzip compression
  enable-gzip: "true"
  gzip-types: "application/json application/javascript text/css text/plain text/xml"

  # Buffer settings
  large-client-header-buffers: "4 32k"
