K8s/test/redis-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-nodeport-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: redis
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
